# zkvm-brainfuck

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
crates/core/executor/: Cargo.toml
crates/core/executor/src/: events.rs  executor.rs  instruction.rs  lib.rs  opcode.rs  program.rs  record.rs  state.rs
crates/core/executor/src/events/: byte.rs  cpu.rs  instr.rs  memory.rs  mod.rs
crates/core/machine/: Cargo.toml
crates/core/machine/src/: lib.rs
crates/core/machine/src/air/: memory.rs  mod.rs  program.rs  u8_air.rs
crates/core/machine/src/alu/: air.rs  cols.rs  mod.rs  trace.rs
crates/core/machine/src/bf/: mod.rs
crates/core/machine/src/brainfuck/: mod.rs
crates/core/machine/src/bytes/: air.rs  cols.rs  mod.rs  trace.rs
crates/core/machine/src/cpu/: air.rs  cols.rs  mod.rs  trace.rs
crates/core/machine/src/io/: mod.rs
crates/core/machine/src/jump/: air.rs  cols.rs  mod.rs  trace.rs
crates/core/machine/src/memory/: memory.rs  mod.rs
crates/core/machine/src/memory/consistency/: cols.rs  mod.rs  trace.rs
crates/core/machine/src/memory/instructions/: air.rs  cols.rs  mod.rs  trace.rs
crates/core/machine/src/operations/: add.rs  is_zero.rs  koala_bear_range.rs  koala_bear_word.rs  mod.rs
crates/core/machine/src/program/: mod.rs
crates/core/machine/src/utils/: concurrency.rs  logger.rs  mod.rs  prove.rs  span.rs  tracer.rs
crates/core/matchine/: Cargo.toml
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/primitives/: Cargo.toml
crates/primitives/src/: consts.rs  lib.rs
crates/prover/: Cargo.toml
crates/prover/src/: components.rs  lib.rs  types.rs  verify.rs
crates/sdk/: Cargo.toml
crates/sdk/src/: action.rs  lib.rs  proof.rs
crates/sdk/src/provers/: cpu.rs  mod.rs
crates/stark/: Cargo.toml
crates/stark/src/: chip.rs  config.rs  debug.rs  folder.rs  kb31_poseidon2.rs  lib.rs  machine.rs  permutation.rs  prover.rs  quotient.rs  record.rs  types.rs  verifier.rs  word.rs
crates/stark/src/air/: builder.rs  lookup.rs  machine.rs  mod.rs
crates/stark/src/lookup/: builder.rs  debug.rs  lookup.rs  mod.rs
crates/test-artifacts/: Cargo.toml
crates/test-artifacts/guests/: hello.bf  move.bf  printa.bf
crates/test-artifacts/src/: lib.rs
examples/: Cargo.toml
examples/fibonacci/: Cargo.toml
examples/fibonacci/src/: main.rs
examples/hello/: Cargo.toml
examples/hello/src/: main.rs
