[workspace.package]
name = "zkvm-brainfuck"
version = "1.0.0"
edition = "2021"
license = "MIT"
rust-version = "1.87.0"
repository = "https://github.com/felicityin/zkvm-brainfuck"
keywords = ["brainfuck", "zero-knowledge", "zkvm"]
categories = ["cryptography"]

[workspace]
members = [
    "crates/core/executor",
    "crates/core/machine",
    "crates/derive",
    "crates/primitives",
    "crates/test-artifacts",
    "crates/stark",
]
resolver = "2"

[workspace.dependencies]
bf-core-executor = { path = "crates/core/executor" }
bf-core-machine = { path = "crates/core/machine" }
bf-derive = { path = "crates/derive" }
bf-stark = { path = "crates/stark" }
bf-primitives = { path = "crates/primitives" }

p3-air = { git = "https://github.com/zkMIPS/Plonky3" }
p3-field = { git = "https://github.com/zkMIPS/Plonky3" }
p3-challenger = { git = "https://github.com/zkMIPS/Plonky3" }
p3-commit = { git = "https://github.com/zkMIPS/Plonky3" }
p3-dft = { git = "https://github.com/zkMIPS/Plonky3" }
p3-matrix = { git = "https://github.com/zkMIPS/Plonky3" }
p3-maybe-rayon = { git = "https://github.com/zkMIPS/Plonky3" }
p3-util = { git = "https://github.com/zkMIPS/Plonky3" }
p3-fri = { git = "https://github.com/zkMIPS/Plonky3" }
p3-koala-bear  = { git = "https://github.com/zkMIPS/Plonky3" }
p3-circle = { git = "https://github.com/zkMIPS/Plonky3" }
p3-keccak = { git = "https://github.com/zkMIPS/Plonky3" }
p3-keccak-air = { git = "https://github.com/zkMIPS/Plonky3" }
p3-mds = { git = "https://github.com/zkMIPS/Plonky3" }
p3-merkle-tree = { git = "https://github.com/zkMIPS/Plonky3" }
p3-mersenne-31 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-monty-31 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-poseidon2 = { git = "https://github.com/zkMIPS/Plonky3" }
p3-symmetric = { git = "https://github.com/zkMIPS/Plonky3" }
p3-bn254-fr = { git = "https://github.com/zkMIPS/Plonky3" }
p3-uni-stark = { git = "https://github.com/zkMIPS/Plonky3" }

anyhow = "1.0.75"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17" }
tracing-forest = { version = "0.1.6", default-features = false }
rand = "0.9.0"
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = "1.0.132"
hashbrown = "0.15.2"
itertools = "0.14.0"

# For testing.
test-artifacts = { path = "crates/test-artifacts" }
