[package]
name = "bf-prover"
description = "Brainfuck prover"
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
bf-core-executor = { workspace = true }
bf-core-machine = { workspace = true }
bf-primitives = { workspace = true }
bf-stark = { workspace = true }
p3-matrix = { workspace = true }
p3-symmetric = { workspace = true }
p3-field = { workspace = true }
p3-challenger = { workspace = true }
p3-koala-bear = { workspace = true }
p3-bn254-fr = { workspace = true }
p3-commit = { workspace = true }
p3-util = { workspace = true }
bincode = "1.3.3"
serde = { workspace = true, features = ["derive", "rc"] }
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2.3"
serde_json = { workspace = true }
clap = { version = "4.5.9", features = ["derive", "env"] }
anyhow = "1.0.83"
dirs = "5.0.1"
serial_test = "3.1.1"
num-bigint = "0.4.6"
thiserror = "1.0.63"
rayon = "1.10.0"
lru = "0.12.4"
eyre = "0.6.12"
test-artifacts = { workspace = true, optional = true }

[dev-dependencies]
test-artifacts = { workspace = true }

[features]
export-tests = ["dep:test-artifacts"]
debug = ["bf-core-machine/debug"]
