[package]
name = "bf-sdk"
description = "zkMIPS is a performant, 100% open-source, contributor-friendly zkVM."
readme = "../../README.md"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
prost = { version = "0.13", optional = true }
serde = { workspace = true, features = ["derive"] }
twirp = { package = "twirp-rs", version = "0.13.0-succinct", optional = true }
async-trait = "0.1.81"
anyhow = "1.0.83"
bf-core-machine = { workspace = true }
bf-core-executor = { workspace = true }
bf-stark = { workspace = true }
bf-primitives = { workspace = true }
bf-prover = { workspace = true }
futures = "0.3.30"
bincode = "1.3.3"
tokio = { version = "1.39.2", features = ["full"], optional = true }
p3-field = { workspace = true }
p3-koala-bear = { workspace = true }
p3-fri = { workspace = true }
indicatif = "0.17.8"
tracing = { workspace = true }
hex = "0.4.3"
log = "0.4.22"
dirs = "5.0.1"
tempfile = "3.10.1"
cfg-if = "1.0"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
hashbrown = { workspace = true }
itertools = { workspace = true }
tonic = { version = "0.12", features = ["tls", "tls-roots"], optional = true }
alloy-sol-types = { version = "0.8", optional = true }
alloy-signer = { version = "0.5", optional = true }
alloy-signer-local = { version = "0.5", optional = true }
alloy-primitives = { version = "0.8", optional = true }
backoff = { version = "0.4", features = ["tokio"], optional = true }

[dev-dependencies]
test-artifacts = { workspace = true }

[build-dependencies]
vergen = { version = "8", default-features = false, features = [
  "build",
  "git",
  "git2",
] }
