[package]
name = "bf-stark"
version = "1.0.0"
edition = "2021"

[dependencies]
p3-air = { workspace = true  }
p3-field = { workspace = true  }
p3-challenger = { workspace = true  }
p3-commit = { workspace = true  }
p3-dft = { workspace = true  }
p3-matrix = { workspace = true  }
p3-maybe-rayon = { workspace = true, features = ["parallel"] }
p3-util = { workspace = true  }
p3-fri = { workspace = true  }
p3-uni-stark = { workspace = true }
p3-koala-bear  = { workspace = true  }
p3-circle = { workspace = true  }
p3-keccak = { workspace = true  }
p3-mds = { workspace = true  }
p3-merkle-tree = { workspace = true  }
p3-mersenne-31 = { workspace = true  }
p3-poseidon2 = { workspace = true  }
p3-symmetric = { workspace = true  }

arrayref = "0.3.8"
rand = { workspace = true }
rayon-scan = "0.1.1"
itertools = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
serde = { workspace = true }
strum = "0.26.3"
strum_macros = "0.26.4"
hashbrown = { version = "0.15.2", features = ["serde", "inline-more"] }
num-bigint = { version = "0.4.3", default-features = false }
num-traits = "0.2.19"
sysinfo = "0.30.13"

bf-derive = { workspace = true }
bf-primitives = { workspace = true }
